--- a/index.html
+++ b/index.html
@@ -120,6 +120,11 @@
 
 
     <div id="intro" style="text-align:center;">
+
+        <a href="https://twitter.com/vivirenremoto" target="_blank"
+            style="font-size:30px;position:fixed;right:10px;top:10px;z-index:2;color:white;text-decoration:none;">by
+            @vivirenremoto</a>
+        <br><br>
         <h1 style="color:Red">LOS INFILTRADOS DEL COVID</h1>
         <h2>ENCUENTRA LOS 3 INFILTRADOS</h2>
         <img src="static/politico.png" width="200" height="200" style="max-width:49%"><img style="max-width:49%"
