--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
                             $(this).css('background-image', "url('static/" + rand_guy + ".png')");
                         });
 
-                        $('#info').html('selecciona los infiltrados').css('color', 'red');
+                        $('#info').html('Busca los infiltrados').css('color', 'red');
                     } else {
 
 
