--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
 
         <br>
         <button id="btn_start">EMPEZAR</button>
+        <br><br>
+
+        <div style="font-size:25px;">Disclaimer: Cualquier parecido con la realidad es coincidencia.</div>
     </div>
 
 
