--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
 
 
 
-    <meta property="og:image" content="https://vivirenremoto.github.io/infiltrados_covid/static/social.png">
-    <meta property="og:image:secure_url" content="https://vivirenremoto.github.io/infiltrados_covid/static/social.png">
+
+
+    <link rel="prefetch" href="https://vivirenremoto.github.io/infiltrados_covid/static/heart.mp3" />
+    <link rel="prefetch" href="https://vivirenremoto.github.io/infiltrados_covid/static/map.png" />
+    <link rel="prefetch" href="https://vivirenremoto.github.io/infiltrados_covid/static/playerr.gif" />
+
+
+
+
+    <meta property="og:image" content="https://vivirenremoto.github.io/infiltrados_covid/static/social.png?1">
+    <meta property="og:image:secure_url"
+        content="https://vivirenremoto.github.io/infiltrados_covid/static/social.png?1">
     <meta property="og:image:alt" content="Juego - Los infiltrados del Covid">
     <meta property="og:image:type" content="image/png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Juego - Los infiltrados del Covid">
-    <meta name="twitter:image" content="https://vivirenremoto.github.io/infiltrados_covid/static/social.png">
+    <meta name="twitter:image" content="https://vivirenremoto.github.io/infiltrados_covid/static/social.png?1">
 
 
 </head>
