--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <img src="static/politico.png" width="200" height="200" style="max-width:49%"><img style="max-width:49%"
             src="static/militar.png" width="200" height="200">
         <br>
-        <h2>▲ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ▲</h2>
+        <h2>▲ &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ▲</h2>
         <h2>Polítco &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Militar</h2>
 
         <br>
