--- a/index.html
+++ b/index.html
@@ -140,13 +140,14 @@
         <img src="static/politico.png" width="200" height="200" style="max-width:49%"><img style="max-width:49%"
             src="static/militar.png" width="200" height="200">
         <br>
-        <h2 style="margin-top: -25px;">Polítco &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Militar</h2>
+        <h2 style="margin-top: -25px;">Polítco &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Militar</h2>
 
         <br>
         <button id="btn_start">EMPEZAR</button>
         <br><br>
 
-        <div style="font-size:25px;">Disclaimer: Cualquier parecido con la realidad es coincidencia.</div>
+        <div style="font-size:25px;color:yellow;">Disclaimer: Cualquier parecido con la realidad es pura coincidencia.
+        </div>
     </div>
 
 
