--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 } else {
 
                     $('#result_title').html('game over').css('color', '#ff0000');
-                    $('#result_stats').html(total_found + '/' + total_enemies + ' infiltrados');
+                    $('#result_stats').html(total_found + '/' + total_enemies + ' infiltrados encontrados');
                 }
 
                 $('#game').hide();
