--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         .ko {
             background: #ff0000;
             color: white;
-            margin-left: 15px;
+            margin-left: 20px;
         }
 
 
@@ -305,7 +305,7 @@
                     total_lives--;
 
 
-                    $('#check').show().html('&nbsp;-❤&nbsp;').addClass('ko').removeClass('ok');
+                    $('#check').show().html('error').addClass('ko').removeClass('ok');
                 }
 
                 if ((total_lives == 0) || (total_found == total_enemies)) {
